src/Vivado/RedPitaya_v1.0.sdk/.metadata/.plugins/org.eclipse.cdt.ui/Ledv2.build.log
16:50:06 **** Incremental Build of configuration Debug for project Ledv2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/projetPitaya.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/projetPitaya.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Ledv2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/projetPitaya.d" -MT"src/projetPitaya.o" -o "src/projetPitaya.o" "../src/projetPitaya.c"
../src/projetPitaya.c: In function 'main':
../src/projetPitaya.c:115:6: error: 'Status' undeclared (first use in this function); did you mean 'XStatus'?
  if (Status != XST_SUCCESS) {
      ^~~~~~
      XStatus
../src/projetPitaya.c:115:6: note: each undeclared identifier is reported only once for each function it appears in
../src/projetPitaya.c:140:8: warning: unused variable 'stringg' [-Wunused-variable]
  char *stringg;
        ^~~~~~~
../src/projetPitaya.c:103:40: warning: variable 'StatusGpio_phase' set but not used [-Wunused-but-set-variable]
  int StatusGpio_Indices,StatusGpio_Sel,StatusGpio_phase;
                                        ^~~~~~~~~~~~~~~~
../src/projetPitaya.c:103:25: warning: variable 'StatusGpio_Sel' set but not used [-Wunused-but-set-variable]
  int StatusGpio_Indices,StatusGpio_Sel,StatusGpio_phase;
                         ^~~~~~~~~~~~~~
../src/projetPitaya.c:103:6: warning: variable 'StatusGpio_Indices' set but not used [-Wunused-but-set-variable]
  int StatusGpio_Indices,StatusGpio_Sel,StatusGpio_phase;
      ^~~~~~~~~~~~~~~~~~
../src/projetPitaya.c: In function 'uart0_outbyte':
../src/projetPitaya.c:86:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [src/projetPitaya.o] Erreur 1

16:50:06 Build Finished (took 364ms)

